Finally, end with frameAllocation
Last reapairs of: manual and zonal algorithm